RESOLVED FIXED57177
Fix agentOS() in FrameLoaderClientEfl
https://bugs.webkit.org/show_bug.cgi?id=57177
Summary Fix agentOS() in FrameLoaderClientEfl
Patrick R. Gansterer
Reported 2011-03-27 04:01:53 PDT
Fix agentOS() in FrameLoaderClientEfl
Attachments
Patch (1.85 KB, patch)
2011-03-27 04:04 PDT, Patrick R. Gansterer
no flags
Patrick R. Gansterer
Comment 1 2011-03-27 04:04:11 PDT
Andreas Kling
Comment 2 2011-03-27 08:59:49 PDT
Comment on attachment 87066 [details] Patch r=me
Patrick R. Gansterer
Comment 3 2011-03-27 10:42:31 PDT
Comment on attachment 87066 [details] Patch Clearing flags on attachment: 87066 Committed r82072: <http://trac.webkit.org/changeset/82072>
Patrick R. Gansterer
Comment 4 2011-03-27 10:42:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.