2011-03-27  Patrick Gansterer  <paroga@webkit.org>

Reviewed by Andreas Kling.

        Fix agentOS() in FrameLoaderClientEfl
        https://bugs.webkit.org/show_bug.cgi?id=57177

        Replace old PLATFORM macro with OS and CPU.

        * WebCoreSupport/FrameLoaderClientEfl.cpp:
        (WebCore::agentOS):

Canonical link: https://commits.webkit.org/71877@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82072 268f45cc-cd09-0410-ab3c-d52691b4dbfc